@@ -3,7 +3,9 @@
  * Floating point images are now supported for importing as height maps and masks
  * 32-bit unsigned integer images are now supported for importing masks (they already were for height maps)
  * When opening the Import Height Map or Import Mask screens, the file selection dialog is now immediately shown
+ * It is now possible to add a Nether or End dimension to Imported worlds
  * Bug fix: selecting a paint from the map from the Global Operations screen now works more than once
+ * Bug fix: Merging a world that was not Imported will no longer cause it to be considered an Imported world afterwards
 
 -- Version 2.17.2, released 21-5-2023
 
